--- a/index.html
+++ b/index.html
@@ -18,13 +18,16 @@
                 <div>
                     <form>
                         <label>User name</label>
-                        <input id="name" type="text" placeholder="Enter your name" required>
+                        <input id="name" type="text" placeholder="Enter your name">
+                        <p id="user" class="nameError"></p>
                         <label>Email</label>
-                        <input id="email" type="email" placeholder="Enter your Email"  required>
+                        <input id="email" type="text" placeholder="Enter your Email">
+                        <p id="mail" class="mailError"></p>
                         <label>Password</label>
-                        <input id="password1" type="password" placeholder="Enter your password" required>
+                        <input id="password" type="password" placeholder="Enter your password">
                         <label>Retype Password</label>
-                        <input id="password2" type="password" placeholder="Enter password again" required>
+                        <input id="confirmPassword" type="password" placeholder="Enter password again">
+                        <p id="demo" class="cpError"></p>
                         <button type="submit">SUBMIT</button>
                     </form>
                 </div>
