--- a/index.html
+++ b/index.html
@@ -15,22 +15,22 @@
         </header>
         <main>
             <section id="form">
-                <div>
-                    <form>
-                        <label>User name</label>
-                        <input id="name" type="text" placeholder="Enter your name">
-                        <p id="user" class="nameError"></p>
-                        <label>Email</label>
-                        <input id="email" type="text" placeholder="Enter your Email">
-                        <p id="mail" class="mailError"></p>
-                        <label>Password</label>
-                        <input id="password" type="password" placeholder="Enter your password">
-                        <label>Retype Password</label>
-                        <input id="confirmPassword" type="password" placeholder="Enter password again">
-                        <p id="demo" class="cpError"></p>
-                        <button type="submit">SUBMIT</button>
-                    </form>
-                </div>
+                  <p id="errorText"></p>
+                  <form>
+                    <label>User name</label>
+                    <input id="name" type="text" placeholder="Enter your name">
+                    <p id="user" class="nameError"></p>
+                    <label>Email</label>
+                    <input id="email" type="text" placeholder="Enter your Email">
+                    <p id="mail" class="nameError"></p>
+                    <label>Password</label>
+                    <input id="password" type="password" placeholder="Enter your password">
+                    <p id="demo" class="nameError"></p>
+                    <label>Retype Password</label>
+                    <input id="confirmPassword" type="password" placeholder="Enter password again">
+                    <p id="demo" class="nameError"></p>
+                    <button type="submit">SUBMIT</button>
+                  </form>
             </section>
         </main>
     </div>
