--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css">
     
-    <title>Form-Validation</title>
+    <title>Register-Form</title>
   </head>
   <body>
     <script src="script.js"></script>
     <div class="container">
         <header>
-            <h1>REGISTRATION FORM</h1>
+            <h2>REGISTRATION FORM</h2>
         </header>
         <main>
             <section id="form">
@@ -31,6 +31,7 @@
                     <p id="demo" class="nameError"></p>
                     <button type="submit">SUBMIT</button>
                   </form>
+                  <div></div>
             </section>
         </main>
     </div>
