valid password email

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <p id="mail" class="nameError"></p>
                     <label>Password</label>
                     <input id="password" type="password" placeholder="Enter your password">
-                    <p id="demo" class="nameError"></p>
+                    <p id="psw" class="nameError"></p>
                     <label>Retype Password</label>
                     <input id="confirmPassword" type="password" placeholder="Enter password again">
                     <p id="demo" class="nameError"></p>
